--- a/GUI/Makefile.Release
+++ b/GUI/Makefile.Release
@@ -2373,42 +2373,12 @@ release/mainwindow.o: mainwindow.cpp mainwindow.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/qtabbar.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/qrubberband.h \
 		ui_mainwindow.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/QVariant \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QAction \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qaction.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qactiongroup.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QApplication \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qapplication.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qdesktopwidget.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qguiapplication.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qinputmethod.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QButtonGroup \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qbuttongroup.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QGroupBox \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qgroupbox.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QHBoxLayout \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QHeaderView \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qheaderview.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QLabel \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qlabel.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QLineEdit \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qlineedit.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QMenu \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qmenu.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QMenuBar \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qmenubar.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QSplitter \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qsplitter.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QStatusBar \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qstatusbar.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QTabWidget \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QToolBar \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qtoolbar.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QVBoxLayout \
 		NewLayout.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/QDialog \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/qdialog.h \
 		LayoutDesign.h \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/QLineEdit \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qlineedit.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/QMessageBox \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/qmessagebox.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\mainwindow.o mainwindow.cpp
@@ -3199,56 +3169,7 @@ release/NewLayout.o: NewLayout.cpp NewLayout.h \
 		D:/Qt/5.7/mingw53_32/include/QtCore/qfiledevice.h \
 		D:/Qt/5.7/mingw53_32/include/QtGui/qvector2d.h \
 		D:/Qt/5.7/mingw53_32/include/QtGui/qtouchdevice.h \
-		ui_NewLayout.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/QVariant \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QAction \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qaction.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qicon.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qactiongroup.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QApplication \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qapplication.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/qcoreapplication.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/qeventloop.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qdesktopwidget.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qguiapplication.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qinputmethod.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QButtonGroup \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qbuttongroup.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QHBoxLayout \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qboxlayout.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qlayout.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qlayoutitem.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qgridlayout.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QHeaderView \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qheaderview.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractitemview.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractscrollarea.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qframe.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/qabstractitemmodel.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/qitemselectionmodel.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractitemdelegate.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qstyleoption.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractspinbox.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qvalidator.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/qregularexpression.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qslider.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractslider.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qstyle.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qtabbar.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qtabwidget.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qrubberband.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QLabel \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qlabel.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QLineEdit \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qlineedit.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qtextcursor.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qtextformat.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qpen.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qtextoption.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QPushButton \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qpushbutton.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractbutton.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QVBoxLayout
+		ui_NewLayout.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\NewLayout.o NewLayout.cpp
 
 release/ClickHandler.o: ClickHandler.cpp electrode.h \
@@ -3949,39 +3870,13 @@ release/LayoutDesign.o: LayoutDesign.cpp LayoutDesign.h \
 		D:/Qt/5.7/mingw53_32/include/QtGui/qpen.h \
 		D:/Qt/5.7/mingw53_32/include/QtGui/qtextoption.h \
 		ui_LayoutDesign.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/QVariant \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QAction \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qaction.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qactiongroup.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QApplication \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qapplication.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qdesktopwidget.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qguiapplication.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qinputmethod.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QButtonGroup \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qbuttongroup.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QHBoxLayout \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QHeaderView \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qheaderview.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractitemview.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractscrollarea.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractitemdelegate.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qstyleoption.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractspinbox.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qvalidator.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qslider.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractslider.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qstyle.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qtabbar.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qrubberband.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QSpacerItem \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QVBoxLayout \
 		NewLayout.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/QMessageBox \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/qmessagebox.h \
 		mainwindow.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/QTextEdit \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/qtextedit.h \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractscrollarea.h \
 		D:/Qt/5.7/mingw53_32/include/QtGui/qtextdocument.h \
 		ClickHandler.h \
 		PathHandler.h \
@@ -3995,12 +3890,22 @@ release/LayoutDesign.o: LayoutDesign.cpp LayoutDesign.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/qcheckbox.h \
 		Time.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/QSlider \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qslider.h \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractslider.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/QSpinBox \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/qspinbox.h \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractspinbox.h \
+		D:/Qt/5.7/mingw53_32/include/QtGui/qvalidator.h \
 		Table.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/QTableWidget \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/qtablewidget.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qtableview.h
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qtableview.h \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractitemview.h \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractitemdelegate.h \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qstyleoption.h \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qstyle.h \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qtabbar.h \
+		D:/Qt/5.7/mingw53_32/include/QtWidgets/qrubberband.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\LayoutDesign.o LayoutDesign.cpp
 
 release/Droplet.o: Droplet.cpp Droplet.h \
@@ -4374,37 +4279,7 @@ release/DropletSelector.o: DropletSelector.cpp DropletSelector.h \
 		D:/Qt/5.7/mingw53_32/include/QtWidgets/qrubberband.h \
 		D:/Qt/5.7/mingw53_32/include/QtCore/qabstractitemmodel.h \
 		D:/Qt/5.7/mingw53_32/include/QtCore/QString \
-		ui_DropletSelector.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/QVariant \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QAction \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qaction.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qactiongroup.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QApplication \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qapplication.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/qcoreapplication.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/qeventloop.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qdesktopwidget.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qguiapplication.h \
-		D:/Qt/5.7/mingw53_32/include/QtGui/qinputmethod.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QButtonGroup \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qbuttongroup.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QHBoxLayout \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qboxlayout.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qlayout.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qlayoutitem.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qgridlayout.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QHeaderView \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qheaderview.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractitemview.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractscrollarea.h \
-		D:/Qt/5.7/mingw53_32/include/QtCore/qitemselectionmodel.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QLabel \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qlabel.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QPushButton \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qpushbutton.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/qabstractbutton.h \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QSpacerItem \
-		D:/Qt/5.7/mingw53_32/include/QtWidgets/QVBoxLayout
+		ui_DropletSelector.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\DropletSelector.o DropletSelector.cpp
 
 release/Time.o: Time.cpp Time.h \
